can now create blogs

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -15,6 +15,7 @@
             <li class="m-1"><a href="{% url 'home' %}">Home</a></li>
             <li class="m-1"><a href="{% url 'about_me' %}">About Me</a></li>
             <li class="m-1"><a href="{% url 'blogs' %}">Blogs</a></li>
+            <li class="m-1"><a href="https://github.com/invalid-code">Github</a></li>
         </ol>
     </nav>
     {% block content %}{% endblock %}
