--- a/main_app/templates/blogs.html
+++ b/main_app/templates/blogs.html
@@ -11,4 +11,4 @@
     <a href="{% url 'blog' blog.id_str %}">{{ blog.title }}</a>
 </h2>
 {% endfor %}
-{% endblock %}
+{% endblock %}{% block scipts %}{% endblock %}
