--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -8,4 +8,4 @@
 <div class="flex flex-row justify-center">
     <input type="text" name="search-bar" placeholder="Search...">
 </div>
-{% endblock %}
+{% endblock %}{% block scipts %}{% endblock %}
