--- a/main_app/templates/new_blog.html
+++ b/main_app/templates/new_blog.html
@@ -7,4 +7,4 @@
     {{ form }}
     <button type="submit">Create blog</button>
 </form>
-{% endblock %}
+{% endblock %}{% block scipts %}{% endblock %}
