--- a/main_app/templates/about_me.html
+++ b/main_app/templates/about_me.html
@@ -6,4 +6,4 @@
 {% block content %}
 <h1>About me</h1>
 <img src="{% static 'images/placeholder.jpg' %}">
-{% endblock %}
+{% endblock %}{% block scipts %}{% endblock %}
