--- a/main_app/templates/blogs.html
+++ b/main_app/templates/blogs.html
@@ -10,5 +10,13 @@
 <h2>
     <a href="{% url 'blog' blog.id_str %}">{{ blog.title }}</a>
 </h2>
+<form action="{% url 'blog' blog.id_str %}" method="post">
+    {% csrf_token %}
+    <input type="hidden" name="action" value="delete">
+    <button type="submit" id="delete-btn-{{ blog.id_str }}">Delete</button>
+</form>
 {% endfor %}
-{% endblock %}{% block scipts %}{% endblock %}
+{{ blogs|json_script:"blogs" }}
+{% endblock %}
+
+{% block scipts %}{% endblock %}
