--- a/main_app/templates/blog.html
+++ b/main_app/templates/blog.html
@@ -4,12 +4,12 @@
 {% block title%}{{ blog.title }}{% endblock %}
 
 {% block content %}
-<form action="{% url 'blog' blog.id %}" method="post" id="blog-form">
+<form action="{% url 'blog' blog.id %}" method="post" id="blog-form" enctype="multipart/form-data">
     {% csrf_token %}
     <h1 id="edit-title">{{ blog.title }}</h1>
     <p id="edit-content">{{ blog.content }}</p>
     <input type="hidden" name="action" value="update">
-    <img src="/media/{{ blog.id }}">
+    <img id="edit-image" src="/media/{{ blog.id }}" onerror="this.src = `{% static 'images/placeholder.jpg' %}`">
     <button type="button" id="edit-btn">Edit</button>
     <button type="button" id="cancel-btn">Cancel</button>
 </form>
@@ -31,8 +31,9 @@
                 let contentElem = $("#edit-content");
                 title = titleElem.text();
                 content = contentElem.text();
-                titleElem.replaceWith(`<div id="edit-title"><input type="text" value="${title}" name="title"></div>`);
-                contentElem.replaceWith(`<div id="edit-content"><input type="text" value="${content}" name="content"></div>`);
+                titleElem.replaceWith(`<div id="edit-title"><label for="title-input">Title: </label><input id="title-input" type="text" value="${title}" name="title"></div>`);
+                contentElem.replaceWith(`<div id="edit-content"><label for="content-input">Content: </label><input id="content-input" type="text" value="${content}" name="content"></div>`);
+                $("#edit-image").replaceWith(`<div id="edit-image"><label for="image-input">Image: </label><input id="image-input" type="file" name="image"></div>`);
                 editBtn.text("Update");
             } else {
                 $("#blog-form").submit();
@@ -41,10 +42,9 @@
         cancelBtn.click(() => {
             event.preventDefault();
             cancelBtn.hide();
-            let titleElem = $("#edit-title");
-            let contentElem = $("#edit-content");
-            titleElem.replaceWith(`<h1 id="edit-title">${title}</h1>`);
-            contentElem.replaceWith(`<p id="edit-content">${content}</p>`);
+            $("#edit-title").replaceWith(`<h1 id="edit-title">${title}</h1>`);
+            $("#edit-content").replaceWith(`<p id="edit-content">${content}</p>`);
+            $("#edit-image").replaceWith("<img id='edit-image' src='/media/{{ blog.id }}' onerror='this.src = `{% static 'images/placeholder.jpg' %}`'> ")
             editBtn.text("Edit");
         });
     });
